fix(demos): align columns content to center in input-controls demo

--- a/src/app/input-controls/input-controls.sample.scss
+++ b/src/app/input-controls/input-controls.sample.scss
@@ -5,6 +5,8 @@
 }
 
 .angular-inputs, .wc-inputs {
+    place-items: center;
+
     > article {
         min-width: 200px;
         display: grid;
